<resources>
    <string name="app_name">Orange Marketplace</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="titleRegistration">Create Account</string>
    <string name="rePwd">Re-enter Password</string>
    <string name="fullName">Full name</string>
    <string name="conditions">Read Terms and Conditions.</string>
    <string name="acceptTerms">I read and agree with terms and conditions.</string>
    <string name="titleLogin">Login</string>
    <string name="dateOfBirth">Date of Birth - DD/MM/YYYY</string>
    <string name="alreadyMember">Already a user? Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="signUp">Don\'t have an account yet? Sign Up</string>
    <string name="account">Account Info</string>
    <string name="profiletext">Profile</string>
    <string name="logOut">Log out</string>
    <string name="first_name_label">Name</string>
    <string name="email_label">Email</string>
    <string name="ebooks">Ebook</string>
    <string name="videos">Video</string>
    <string name="audios">Audio</string>
    <string name="graphic">Graphic Design</string>
    <string name="categories_heading">CATEGORIES</string>
    <string name="select_category">Category</string>
    <string name="profile_text">Profile</string>
    <string name="add_post">Add a post</string>
    <string name="show_posts">Show all Posts</string>
    <string name="create_post">Create a new post</string>
    <string-array name="categories_list">
        <item>Audio</item>
        <item>Video</item>
        <item>Ebook</item>
        <item>Graphic Design</item>
    </string-array>

    <string name="choose_image">Choose Image</string>
    <string name="chose_content">Choose Content File</string>
    <string name="no_file_selected">Choose a file</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="list_categories">Browse Categories</string>
    <string name="list_items">Browse all Items</string>
    <string name="buy">Buy</string>
    <string name="itemdesc">Image Description</string>
    <string name="go_back">Go Back</string>
    <string name="list_items_heading">Orange Marketplace</string>
    <string name="go_back_to_categories">Browse All Categories</string>
    <string name="choose_a_file">Choose a file....</string>
    <string name="cancel">Cancel</string>
    <string name="go_back_to_profile">Go To Profile Page</string>
    <string name="populate_database">Populate the database</string>
</resources>




